--- a/public/html/register.html
+++ b/public/html/register.html
@@ -35,7 +35,7 @@
         <input
           class="register-form-element"
           id="name-register"
-          name="name"
+          name="username"
           type="text"
           required
           placeholder="Name"
