Final Commit >_<, login page Front-End logic Relates #22

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,9 +8,10 @@
       src="https://kit.fontawesome.com/57c783de70.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/login.css" />
-    <title>Reddit</title>
+    <title>Reddit - Log In</title>
   </head>
 
   <body>
