fetch '/register' endpoint with POST method Relates #29

--- a/public/html/register.html
+++ b/public/html/register.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/57c783de70.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/register.css" />
     <title>Reddit</title>
@@ -71,5 +72,6 @@
         </p>
       </form>
     </section>
+    <script src="../js/register.js"></script>
   </body>
 </html>
