fetch '/home' endpoint with POST method Relates #31

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -27,8 +27,8 @@
         <span class="link logout">
           <a href="/logout" id="logout">Log Out</a>
         </span>
-        <span class="link porfile">
-          <a href="/profile" id="profile">Profile</a>
+        <span class="link profile">
+          <a id="profile"></a>
         </span>
       </div>
     </nav>
@@ -114,6 +114,7 @@
       </form>
     </aside>
   </section>
+  <script src="../js/home.js"></script>
 </body>
 
 </html>
