Finishig logout handling Relates #36

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -25,7 +25,7 @@
       </form>
       <div class="links-container">
         <span class="link logout">
-          <a href="/logout" id="logout">Log Out</a>
+          <a  id="logout">Log Out</a>
         </span>
         <span class="link profile">
           <a id="profile"></a>
