Make the website responsive Relates #38

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/57c783de70.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/main.css" />
   <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="../css/media.css">
   <title>Reddit</title>
 </head>
 
